--- a/apps/web/content/blog/why-build-hikari.mdx
+++ b/apps/web/content/blog/why-build-hikari.mdx
@@ -1,5 +1,5 @@
 ---
-title: Why was Hikari built?
+title: Why was LTM Starter Kit built?
 description: I just wanted to scratch an itch.
 date: 2024-07-18
 author: Antoine Ross
@@ -7,7 +7,7 @@ author: Antoine Ross
 
 ## Scratching an Itch
 
-I built Hikari because I wanted to **scratch an itch**.
+I built LTM Starter Kit because I wanted to **scratch an itch**.
 
 As a developer, I found myself in need of a robust starter template for numerous SaaS projects I was actively building at the time. Moreover, I wanted a solution that would serve as a solid foundation for my future projects.
 
@@ -28,9 +28,9 @@ I often found myself returning to the [Supabase subscription repository](https:/
 
 ## Modern Features and Design Choices
 
-In developing Hikari, I wanted to incorporate more modern features and make design choices that would enhance both functionality and user experience. Here are some key changes and additions:
+In developing LTM Starter Kit, I wanted to incorporate more modern features and make design choices that would enhance both functionality and user experience. Here are some key changes and additions:
 
-1. **Documentation Framework**: Replaced Contentlayer with [Fumadocs](https://fumadocs.vercel.app/), a powerful documentation framework. Its design language and flexibility resonated strongly with my vision for Hikari.
+1. **Documentation Framework**: Replaced Contentlayer with [Fumadocs](https://fumadocs.vercel.app/), a powerful documentation framework. Its design language and flexibility resonated strongly with my vision for LTM Starter Kit.
 
 2. **Authentication**: Moved away from Clerk in favor of Supabase for authentication. This change offers more flexibility and better integration with other Supabase services.
 
@@ -51,14 +51,14 @@ In developing Hikari, I wanted to incorporate more modern features and make desi
 
 8. **SEO Friendly**: Implemented SEO best practices, including proper meta tag management and semantic HTML structure.
 
-These features and design choices make Hikari not just a template, but a comprehensive toolkit for building modern, efficient, and user-friendly SaaS applications.
+These features and design choices make LTM Starter Kit not just a template, but a comprehensive toolkit for building modern, efficient, and user-friendly SaaS applications.
 
-# The Philosophy Behind Hikari
+# The Philosophy Behind LTM Starter Kit
 
 ## Open Source and Community
 
-Building Hikari wasn't just about solving my own problems. I'm a firm believer in open source and wanted to give back to the community that has helped me learn and grow. By sharing Hikari, I hope to contribute to the ecosystem and help other developers who might face similar challenges.
-So I'd like to give a special thanks to all the open source projects that I've used to build Hikari.
+Building LTM Starter Kit wasn't just about solving my own problems. I'm a firm believer in open source and wanted to give back to the community that has helped me learn and grow. By sharing LTM Starter Kit, I hope to contribute to the ecosystem and help other developers who might face similar challenges.
+So I'd like to give a special thanks to all the open source projects that I've used to build LTM Starter Kit.
 
 - [ShadcnUI](https://github.com/shadcn-ui/ui): A collection of accessible UI components for building modern web applications.
 - [Taxonomy](https://github.com/shadcn-ui/taxonomy): A modern starter template for Next.js 13.
@@ -69,8 +69,8 @@ So I'd like to give a special thanks to all the open source projects that I've u
 
 ## Looking Forward
 
-Hikari is just the beginning. Over the past six months, I've been studying and working on a variety of projects, each addressing different _"itches"_ I've encountered in my development journey. I'm excited to release these projects in the coming months and share my progress with the community.
+LTM Starter Kit is just the beginning. Over the past six months, I've been studying and working on a variety of projects, each addressing different _"itches"_ I've encountered in my development journey. I'm excited to release these projects in the coming months and share my progress with the community.
 
 If you're interested in following along with these projects or want to see what else I'm working on, feel free to check out my Twitter: [@antoineross\_\_](https://twitter.com/antoineross__).
 
-In the end, Hikari represents not just a tool, but a philosophy: **build what you need, make it flexible, and share it with others**. I hope it serves you as well as it has served me.
+In the end, LTM Starter Kit represents not just a tool, but a philosophy: **build what you need, make it flexible, and share it with others**. I hope it serves you as well as it has served me.
