--- a/apps/web/content/docs/index.mdx
+++ b/apps/web/content/docs/index.mdx
@@ -4,7 +4,7 @@ description: Short love letter
 icon: Album
 ---
 
-Welcome to Hikari, my open source project for building a SaaS application with Next.js.
+Welcome to LTM Starter Kit, my open source project for building a SaaS application with Next.js.
 
 This project is a Next.js starter kit that is designed to help you get up and running with your next SaaS project. Special thanks to the following projects for making this possible:
 
