--- a/apps/web/content/docs/quick-start.mdx
+++ b/apps/web/content/docs/quick-start.mdx
@@ -1,6 +1,6 @@
 ---
 title: Quick Start
-description: Getting Started with Hikari
+description: Getting Started with LTM Starter Kit
 icon: Album
 ---
 
