--- a/apps/web/content/docs/trpc/example.mdx
+++ b/apps/web/content/docs/trpc/example.mdx
@@ -92,7 +92,7 @@ And finally, to get all posts, you would use a query:
     }),
 ```
 
-The structure of building API's with tRPC is simple. If you want to see the rest of the code for the posts router, you can view it [here](https://github.com/antoineross/hikari/server/api/routers/posts.ts).
+The structure of building API's with tRPC is simple. If you want to see the rest of the code for the posts router, you can view it [here](https://github.com/antoineross/ltm-starter-kit/server/api/routers/posts.ts).
 
 ### 2. Calling tRPC in the Client
 
@@ -148,4 +148,4 @@ tRPC streamlines the development process by allowing you to define your API rout
 
 ### Important Note
 
-A new SQL file for the posts has been added. If anyone from a previous version of Hikari wants to try it locally, they need to run [this](https://github.com/antoineross/hikari/blob/main/supabase/migrations/20240918141953_posts.sql) SQL file to set up the necessary database structure.
+A new SQL file for the posts has been added. If anyone from a previous version of LTM Starter Kit wants to try it locally, they need to run [this](https://github.com/antoineross/ltm-starter-kit/blob/main/supabase/migrations/20240918141953_posts.sql) SQL file to set up the necessary database structure.
