--- a/apps/web/content/blog/integration-supacrawler.mdx
+++ b/apps/web/content/blog/integration-supacrawler.mdx
@@ -1,21 +1,21 @@
 ---
-title: How Supacrawler Enhances Hikari Projects - A Showcase  
-description: Using Supacrawler alongside Hikari unlocks powerful data tools for SaaS apps  
+title: How Supacrawler Enhances LTM Starter Kit Projects - A Showcase  
+description: Using Supacrawler alongside LTM Starter Kit unlocks powerful data tools for SaaS apps  
 date: 2025-09-10
 author: Antoine Ross  
 ---
 
-When you start a SaaS app using **Hikari**—Next.js 14 + Supabase + Stripe + Tailwind—you get a strong foundation: authentication, subscription billing, dashboards, docs/blog support, UI scaffolding.
+When you start a SaaS app using **LTM Starter Kit**—Next.js 14 + Supabase + Stripe + Tailwind—you get a strong foundation: authentication, subscription billing, dashboards, docs/blog support, UI scaffolding.
 
 But often, you’ll also want to bring in external content, monitor page changes, or extract structured data from other sites. That’s where [**Supacrawler**](https://supacrawler.com) becomes a natural companion.
 
-Below is how Supacrawler adds value to Hikari-based projects, some use-cases, what implementing it looks like, and why this combo works well.
+Below is how Supacrawler adds value to LTM Starter Kit-based projects, some use-cases, what implementing it looks like, and why this combo works well.
 
 ---
 
 ## What Supacrawler Brings to the Table
 
-Here are the capabilities Supacrawler provides that Hikari doesn't include out of the box:
+Here are the capabilities Supacrawler provides that LTM Starter Kit doesn't include out of the box:
 
 - Extracting and transforming content from external sources (blogs, documentation) via REST API endpoints like `/scrape` and `/crawl`.  
 - Full-page screenshots and previews (with JS rendering) using `/screenshots`.  
@@ -24,33 +24,33 @@ Here are the capabilities Supacrawler provides that Hikari doesn't include out o
 
 ---
 
-## Example Workflows When You Combine Hikari + Supacrawler
+## Example Workflows When You Combine LTM Starter Kit + Supacrawler
 
-These are practical scenarios showing how developers using Hikari could plug in Supacrawler to extend their app:
+These are practical scenarios showing how developers using LTM Starter Kit could plug in Supacrawler to extend their app:
 
 | Workflow | How Supacrawler Is Used | Why It Helps |
 |---|---|---|
-| **Content Imports** | Use the `/crawl` endpoint to harvest external blog or docs content, convert it to Markdown/JSON, and integrate into Hikari’s blog or knowledge sections. | Lets you aggregate content without manually copying/pasting, or writing scraping logic. Keeps content up-to-date automatically. |
+| **Content Imports** | Use the `/crawl` endpoint to harvest external blog or docs content, convert it to Markdown/JSON, and integrate into LTM Starter Kit's blog or knowledge sections. | Lets you aggregate content without manually copying/pasting, or writing scraping logic. Keeps content up-to-date automatically. |
 | **Change Alerts & Monitoring** | For pages that matter (competitor pricing, external docs, regulatory sites), schedule `/watch` jobs; then show flagged changes in dashboards or send email/webhooks. | Great for SaaS apps that need real-world signals or timely updates. Reactive rather than manual. |
 | **Visual Previews / Archiving** | When users supply URLs to display content previews (e.g. link previews, snapshots), use `/screenshots`. | Improves UI / UX; gives a visual way to confirm content, not just text. |
 | **Data-Driven Features** | Build features like content search, enrichment (extract metadata, links, images) using `/scrape` and `/crawl`. For example, combining scraped documentation with your own content search powered by Supabase + vector embeddings. | Adds value-added features (search, recommendation) without heavy scraping infrastructure. |
 
 ---
 
-## How to Integrate Supacrawler with Hikari
+## How to Integrate Supacrawler with LTM Starter Kit
 
 Here’s a mental sketch of how you’d wire them up:
 
 1. **API Key / Service Setup**  
-   Deploy or use Supacrawler (locally or hosted), get API key, set environment variables in your Hikari project to point to Supacrawler endpoints (e.g., `SUPACRAWLER_API_URL`, `SUPACRAWLER_KEY`).
+   Deploy or use Supacrawler (locally or hosted), get API key, set environment variables in your LTM Starter Kit project to point to Supacrawler endpoints (e.g., `SUPACRAWLER_API_URL`, `SUPACRAWLER_KEY`).
 
 2. **Create Utility Modules**  
-   In Hikari, write small service modules (JS/TypeScript) that call Supacrawler’s `/scrape`, `/crawl`, etc. Maybe utilities like `fetchExternalBlogContent()`, `watchPageDifferences()`, `generatePreviewScreenshot()`.
+   In LTM Starter Kit, write small service modules (JS/TypeScript) that call Supacrawler's `/scrape`, `/crawl`, etc. Maybe utilities like `fetchExternalBlogContent()`, `watchPageDifferences()`, `generatePreviewScreenshot()`.
 
 3. **UI / Backend Hooks**  
    - Backend server side (Next.js API routes) to process the Supacrawler jobs, handle responses.  
    - Frontend UI components to display previews, show status of monitoring, or content fetched.  
-   - Use dashboards in Hikari to show external content, maybe with filters or schedule.
+   - Use dashboards in LTM Starter Kit to show external content, maybe with filters or schedule.
 
 4. **Configuration Choices**  
    - Depth of crawl, link limits, and whether JS rendering is needed (these affect performance).  
