--- a/apps/web/content/blog/introduction.mdx
+++ b/apps/web/content/blog/introduction.mdx
@@ -1,17 +1,17 @@
 ---
 title: A Complete & Open Source SaaS Starter Using Next.js, Supabase, and Stripe
-description: Discover the powerful features and benefits of Hikari, a comprehensive Next.js SaaS starter.
+description: Discover the powerful features and benefits of LTM Starter Kit, a comprehensive Next.js SaaS starter.
 date: 2023-06-17
 author: Antoine Ross
 ---
 
-## 1. Introduction to Hikari
+## 1. Introduction to LTM Starter Kit
 
-### What is Hikari?
+### What is LTM Starter Kit?
 
-Hikari is a comprehensive, open-source SaaS (Software as a Service) starter template that combines the power of Next.js, Supabase, and Stripe. Designed to accelerate the development of modern web applications, Hikari provides developers with a robust foundation for building scalable, feature-rich SaaS products.
+LTM Starter Kit is a comprehensive, open-source SaaS (Software as a Service) starter template that combines the power of Next.js, Supabase, and Stripe. Designed to accelerate the development of modern web applications, LTM Starter Kit provides developers with a robust foundation for building scalable, feature-rich SaaS products.
 
-[Image Suggestion: Place a hero image here showcasing Hikari's logo and a collage of its key features (Next.js, Supabase, Stripe logos)]
+[Image Suggestion: Place a hero image here showcasing LTM Starter Kit's logo and a collage of its key features (Next.js, Supabase, Stripe logos)]
 
 ### Key Features and Technologies
 
@@ -23,89 +23,89 @@ Hikari is a comprehensive, open-source SaaS (Software as a Service) starter temp
 - **Fumadocs**: Integrated documentation and blogging capabilities
 - **Comprehensive UI Components**: Including landing pages, dashboard elements, and user management interfaces
 
-[Image Suggestion: Insert an infographic here visualizing the tech stack and features of Hikari]
+[Image Suggestion: Insert an infographic here visualizing the tech stack and features of LTM Starter Kit]
 
-## 2. The Power of Next.js in Hikari
+## 2. The Power of Next.js in LTM Starter Kit
 
 ### Next.js 14 and App Router
 
-Hikari leverages Next.js 14, taking full advantage of its App Router feature. This modern routing system allows for:
+LTM Starter Kit leverages Next.js 14, taking full advantage of its App Router feature. This modern routing system allows for:
 
 - Easier management of complex application structures
 - Improved performance through automatic code splitting
 - Enhanced SEO capabilities with built-in metadata API
 
-[Image Suggestion: Include a screenshot of the Hikari project structure, highlighting the App Router implementation]
+[Image Suggestion: Include a screenshot of the LTM Starter Kit project structure, highlighting the App Router implementation]
 
 ### Server and Client Components
 
-Hikari utilizes both server and client components, a key feature of Next.js 14:
+LTM Starter Kit utilizes both server and client components, a key feature of Next.js 14:
 
 - **Server Components**: Render on the server, reducing JavaScript sent to the client and improving initial load times
 - **Client Components**: Enable interactive UI elements and dynamic content updates
-- **Hybrid Approach**: Hikari strategically uses both types to optimize performance and user experience
+- **Hybrid Approach**: LTM Starter Kit strategically uses both types to optimize performance and user experience
 
-[Image Suggestion: Add a diagram illustrating the flow between server and client components in a typical Hikari application]
+[Image Suggestion: Add a diagram illustrating the flow between server and client components in a typical LTM Starter Kit application]
 
 ## 3. Leveraging Supabase for Backend Functionality
 
 ### Authentication and Database Management
 
-Supabase provides Hikari with a powerful, scalable backend solution:
+Supabase provides LTM Starter Kit with a powerful, scalable backend solution:
 
 - **User Authentication**: Easy implementation of secure login systems, including social auth options
 - **PostgreSQL Database**: Robust, scalable database management with real-time capabilities
 - **Row Level Security**: Ensuring data privacy and security at the database level
 
-[Image Suggestion: Include a screenshot of the Hikari sign-in page, showcasing the Supabase-powered authentication]
+[Image Suggestion: Include a screenshot of the LTM Starter Kit sign-in page, showcasing the Supabase-powered authentication]
 
 ### Real-time Capabilities
 
-Supabase's real-time features enable Hikari to offer:
+Supabase's real-time features enable LTM Starter Kit to offer:
 
 - Live data updates without complex WebSocket implementations
 - Real-time collaborative features for multi-user applications
 - Instant synchronization across clients for a seamless user experience
 
-[Image Suggestion: Add an animated GIF or video demonstrating real-time data updates in a Hikari application]
+[Image Suggestion: Add an animated GIF or video demonstrating real-time data updates in a LTM Starter Kit application]
 
 ## 4. Stripe Integration for Billing
 
 ### Setting up Stripe Checkout
 
-Hikari comes with pre-configured Stripe integration:
+LTM Starter Kit comes with pre-configured Stripe integration:
 
 - Easy setup of payment flows using Stripe Checkout
 - Support for various payment methods and currencies
 - Secure handling of payment information
 
-[Image Suggestion: Include a screenshot of the Stripe Checkout process integrated into a Hikari application]
+[Image Suggestion: Include a screenshot of the Stripe Checkout process integrated into a LTM Starter Kit application]
 
 ### Managing Subscriptions
 
-The Stripe integration in Hikari includes robust subscription management:
+The Stripe integration in LTM Starter Kit includes robust subscription management:
 
 - Automated billing cycles and invoice generation
 - Support for different subscription tiers and pricing models
 - Webhook integration for real-time updates on subscription status
 
-[Image Suggestion: Add a mockup of a subscription management dashboard in Hikari]
+[Image Suggestion: Add a mockup of a subscription management dashboard in LTM Starter Kit]
 
 ## 5. Additional Features
 
 ### Fumadocs for Documentation and Blogging
 
-Hikari integrates Fumadocs, providing:
+LTM Starter Kit integrates Fumadocs, providing:
 
 - Built-in documentation capabilities for your SaaS product
 - Blogging functionality to share updates and engage with users
 - Customizable layouts and themes for docs and blog posts
 
-[Image Suggestion: Include a split-screen image showing both the documentation and blog interfaces powered by Fumadocs in Hikari]
+[Image Suggestion: Include a split-screen image showing both the documentation and blog interfaces powered by Fumadocs in LTM Starter Kit]
 
 ### Tailwind CSS for Styling
 
-Tailwind CSS is at the core of Hikari's styling approach:
+Tailwind CSS is at the core of LTM Starter Kit's styling approach:
 
 - Rapid UI development with utility-first classes
 - Consistent design language across the application
@@ -113,15 +113,15 @@ Tailwind CSS is at the core of Hikari's styling approach:
 
 [Image Suggestion: Add a before-and-after comparison of a UI component, showing how Tailwind CSS classes transform the design]
 
-## 6. Getting Started with Hikari
+## 6. Getting Started with LTM Starter Kit
 
 ### Installation Process
 
-Getting started with Hikari is straightforward:
+Getting started with LTM Starter Kit is straightforward:
 
-1. Clone the Hikari repository:
+1. Clone the LTM Starter Kit repository:
    ```bash
-   git clone https://github.com/antoineross/Hikari.git
+   git clone https://github.com/antoineross/ltm-starter-kit.git
    ```
 2. Install dependencies:
    ```bash
@@ -133,25 +133,25 @@ Getting started with Hikari is straightforward:
    pnpm dev
    ```
 
-[Image Suggestion: Include a terminal screenshot showing the successful installation and startup of a Hikari project]
+[Image Suggestion: Include a terminal screenshot showing the successful installation and startup of a LTM Starter Kit project]
 
 ### Customization Options
 
-Hikari is designed to be highly customizable:
+LTM Starter Kit is designed to be highly customizable:
 
 - Modify the `stripe-fixtures.json` file to adjust product and pricing information
 - Customize UI components using Tailwind CSS classes
 - Extend Supabase schema and functions to fit your specific backend needs
 - Add or modify API routes to create custom functionality
 
-[Image Suggestion: Show a split-screen image comparing the default Hikari UI with a customized version, highlighting the flexibility of the template]
+[Image Suggestion: Show a split-screen image comparing the default LTM Starter Kit UI with a customized version, highlighting the flexibility of the template]
 
 ## Conclusion
 
-Hikari stands out as a comprehensive open source SaaS starter, combining the power of Next.js, Supabase, and Stripe. Its robust feature set, coupled with the flexibility to customize and extend, makes it an excellent choice for developers looking to rapidly build and deploy SaaS applications. Whether you're a startup founder, an indie hacker, or part of a development team, Hikari provides the tools and structure you need to bring your SaaS ideas to life quickly and efficiently.
+LTM Starter Kit stands out as a comprehensive open source SaaS starter, combining the power of Next.js, Supabase, and Stripe. Its robust feature set, coupled with the flexibility to customize and extend, makes it an excellent choice for developers looking to rapidly build and deploy SaaS applications. Whether you're a startup founder, an indie hacker, or part of a development team, LTM Starter Kit provides the tools and structure you need to bring your SaaS ideas to life quickly and efficiently.
 
-[Image Suggestion: Close with a showcase image featuring multiple screens of a completed Hikari-based SaaS application, including the landing page, dashboard, and user settings]
+[Image Suggestion: Close with a showcase image featuring multiple screens of a completed LTM Starter Kit-based SaaS application, including the landing page, dashboard, and user settings]
 
-By choosing Hikari, you're not just getting a template – you're gaining access to a full-fledged ecosystem that can grow and evolve with your project. As an open-source project, Hikari benefits from community contributions and constant improvements, ensuring that your SaaS application is built on a solid, future-proof foundation.
+By choosing LTM Starter Kit, you're not just getting a template – you're gaining access to a full-fledged ecosystem that can grow and evolve with your project. As an open-source project, LTM Starter Kit benefits from community contributions and constant improvements, ensuring that your SaaS application is built on a solid, future-proof foundation.
 
-Start building your next big idea with Hikari today and join the growing community of developers leveraging this powerful SaaS starter!
+Start building your next big idea with LTM Starter Kit today and join the growing community of developers leveraging this powerful SaaS starter!
